--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                         />
                     ) : (
                         <>
-                            <Header title="Видео Лента" />
+                            <Header title="NO DADDY TUTORIALS" />
                             
                             <div className="p-4 sticky top-14 z-10 bg-[var(--tg-section)]">
                                 <div className="relative">
